add javadoc WIP
Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,7 @@
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>${maven.plugin.javadoc}</version>
                         <configuration>
+                            <additionalJOption>--no-module-directories</additionalJOption>
                             <doctitle>${javadoc.title}</doctitle>
                             <doclint>${javadoc.lint}</doclint>
                         </configuration>
