--- a/.github/workflows/automate_javadoc.yml
+++ b/.github/workflows/automate_javadoc.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
-          ref: feat/117_Documentation_SCD_Generation_Process
+#          ref:
 
       - name: Create custom Maven Settings.xml
         uses: whelk-io/maven-settings-xml-action@v20
@@ -46,7 +46,7 @@ jobs:
           mkdir -p docs/javadoc
           yes | cp -Rf target/site/apidocs/* docs/javadoc/
           git checkout -b feat/javadoc-pull-request
-          git add docs/ && git commit -s -m "updated Java docs repository" 
+          git add docs/javadoc/ && git commit -s -m "updated Java docs repository" 
 
       # Note that will fail if branch already exists.
       - name: Push Git Branch
