Feat #152: Update SCD creation automation service to call #74 issue (Delete all Control Blocks and Dataset and all ExtRef @srcXXX attributes into a given SCL file)
Signed-off-by: SaintierFr <99645240+SaintierFr@users.noreply.github.com>

Rebase #152 branch onto develop
68-164 - Activation used LDevice and deactivation unused LDevice (#166)

Update documentation
Remove LNode IEDName
Activation used LDevice and deactivation unused LDevice (#166)
Signed-off-by: Aliou DIAITE <aliou.diaite@rte-france.com>
Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>
Signed-off-by: SaintierFr <99645240+SaintierFr@users.noreply.github.com>

feat(152): Rebase branch onto develop

Signed-off-by: SaintierFr <99645240+SaintierFr@users.noreply.github.com>

feat(152): Add unit tests + Suppress STValEnum no more used

Signed-off-by: SaintierFr <99645240+SaintierFr@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,20 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>${maven.plugin.javadoc}</version>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>aggregate</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>${maven-source-plugin.version}</version>
                     <executions>
