--- a/sct-app/pom.xml
+++ b/sct-app/pom.xml
@@ -60,6 +60,11 @@
             <version>3.6.28</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
