--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,7 @@
                         <configuration>
                             <doctitle>${javadoc.title}</doctitle>
                             <doclint>${javadoc.lint}</doclint>
+                            <additionalJOption>--no-module-directories</additionalJOption>
                         </configuration>
                     </plugin>
                 </plugins>
