--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -85,7 +85,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
-        ./mvn -B -s custom_maven_settings.xml \
+        mvn -B -s custom_maven_settings.xml \
           ${{ steps.sonar_env.outputs.sonar_opts }} \
           -Dsonar.pullrequest.branch=${{ fromJson(steps.get_pr_data.outputs.data).head.ref }} \
           -Dsonar.pullrequest.key=${{ fromJson(steps.get_pr_data.outputs.data).number }} \
