--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -98,7 +98,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
-        ./mvn -B -s custom_maven_settings.xml \
+        mvn -B -s custom_maven_settings.xml \
           ${{ steps.sonar_env.outputs.sonar_opts }} \
           -Dsonar.scm.revision=${{ github.event.workflow_run.head_sha }} \
           -Dsonar.branch.name=${{ github.event.workflow_run.head_branch }} \
