--- a/.github/workflows/sonarcloud-build.yml
+++ b/.github/workflows/sonarcloud-build.yml
@@ -49,7 +49,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ./mvn -B -s custom_maven_settings.xml clean verify
+          mvn -B -s custom_maven_settings.xml clean verify
       - name: Save PR number to file
         if: github.event_name == 'pull_request'
         run: echo ${{ github.event.number }} > PR_NUMBER.txt
