--- a/.github/workflows/release-project.yml
+++ b/.github/workflows/release-project.yml
@@ -18,12 +18,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Extract tag name
-        id: extract_tagname
-        shell: bash
-        # Extra the tagname form the git reference, value of GITHUB_REF will be something like refs/tags/<tag_name>.
-        run: echo "##[set-output name=tagname;]$(echo ${GITHUB_REF##*/})"
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -36,7 +30,7 @@ jobs:
           output_file: custom_maven_settings.xml
           servers: '[{ "id": "github-packages-compas", "username": "OWNER", "password": "${{ secrets.GITHUB_TOKEN }}" }]'
       - name: Set version with Maven
-        run: mvn -B versions:set -DprocessAllModules=true -DnewVersion=${{ steps.extract_tagname.outputs.tagname }}
+        run: mvn -B versions:set -DprocessAllModules=true -DnewVersion=${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Deploy with Maven to GitHub Packages
