--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -71,9 +71,9 @@ jobs:
     - name: Set Common Sonar Variables
       id: sonar_env
       run: |
-        echo "##[set-output name=sonar_opts;]$(echo -Dsonar.host.url=https://sonarcloud.io \
+        echo "sonar_opts=-Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.projectKey=com-pas_compas-sct \
-          -Dsonar.organization=com-pas )"
+          -Dsonar.organization=com-pas" >> $GITHUB_OUTPUT
     - name: Create custom Maven Settings.xml
       uses: whelk-io/maven-settings-xml-action@v21
       with:
