feat(EPF): Change setting file from CSV to XML
Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

feat(EPF): remove LDEPFSettingData + review submit

Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

feat(EPF): review submit, part2

Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

feat(EPF): review submit, part3

Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

feat(EPF): review submit, update XSD(EPF) file

Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

feat(EPF): review submit, adjust method name

Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

feat(EPF): review submit

Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

--- a/sct-commons/pom.xml
+++ b/sct-commons/pom.xml
@@ -161,23 +161,41 @@
                 <version>3.1.0</version>
                 <executions>
                     <execution>
-                        <id>xjc</id>
+                        <id>scl</id>
                         <goals>
                             <goal>xjc</goal>
                         </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.outputDirectory}/xsd/SCL2007B4/SCL.xsd</source>
+                                <source>${project.build.outputDirectory}/xsd/SCL_CoMPAS.xsd</source>
+                            </sources>
+                            <xjbSources>
+                                <xjbSource>${project.basedir}/src/main/resources/binding_configuration.xjb</xjbSource>
+                            </xjbSources>
+                            <packageName>org.lfenergy.compas.scl2007b4.model</packageName>
+                            <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
+                            <clearOutputDir>false</clearOutputDir>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>epf</id>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.basedir}/src/main/resources/xsd/LDEPF_Config_file_v2.xsd</source>
+                            </sources>
+                            <xjbSources>
+                                <xjbSource>${project.basedir}/src/main/resources/binding_configuration.xjb</xjbSource>
+                            </xjbSources>
+                            <packageName>org.lfenergy.compas.sct.commons.model.epf</packageName>
+                            <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
+                            <clearOutputDir>false</clearOutputDir>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <sources>
-                        <source>${project.build.outputDirectory}/xsd/SCL2007B4/SCL.xsd</source>
-                        <source>${project.build.outputDirectory}/xsd/SCL_CoMPAS.xsd</source>
-                    </sources>
-                    <xjbSources>
-                        <xjbSource>${project.basedir}/src/main/resources/binding_configuration.xjb</xjbSource>
-                    </xjbSources>
-                    <packageName>org.lfenergy.compas.scl2007b4.model</packageName>
-                    <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
