--- a/sct-commons/pom.xml
+++ b/sct-commons/pom.xml
@@ -185,7 +185,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>${project.basedir}/src/main/resources/xsd/LDEPF_Config_file_v2.xsd</source>
+                                <source>${project.basedir}/src/main/resources/xsd/LDEPF.xsd</source>
                             </sources>
                             <xjbSources>
                                 <xjbSource>${project.basedir}/src/main/resources/binding_configuration.xjb</xjbSource>
@@ -210,6 +210,23 @@
                                 <xjbSource>${project.basedir}/src/main/resources/binding_configuration.xjb</xjbSource>
                             </xjbSources>
                             <packageName>org.lfenergy.compas.sct.commons.model.cb_po</packageName>
+                            <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
+                            <clearOutputDir>false</clearOutputDir>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>cbcom</id>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.basedir}/src/main/resources/xsd/GSE_SMV_CB_COM.xsd</source>
+                            </sources>
+                            <xjbSources>
+                                <xjbSource>${project.basedir}/src/main/resources/binding_configuration.xjb</xjbSource>
+                            </xjbSources>
+                            <packageName>org.lfenergy.compas.sct.commons.model.cbcom</packageName>
                             <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
                             <clearOutputDir>false</clearOutputDir>
                         </configuration>
