--- a/sct-commons/pom.xml
+++ b/sct-commons/pom.xml
@@ -18,8 +18,6 @@
     <name>SCT-COMMONS</name>
 
     <properties>
-        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
-        <sonar.jacoco.excludes>**/scl2007b4/**/*</sonar.jacoco.excludes>
         <opencsv.version>5.7.1</opencsv.version>
         <jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
         <jaxb-runtime.version>4.0.3</jaxb-runtime.version>
@@ -124,13 +122,19 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <!-- la rapport est généré par défaut: target/site/jacoco/jacoco.xml -->
+                        <configuration>
+                            <formats>
+                                <!-- sonar a uniquement besoin du xml -->
+                                <format>XML</format>
+                            </formats>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>unpack</id>
@@ -158,7 +162,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>scl</id>
