--- a/sct-app/pom.xml
+++ b/sct-app/pom.xml
@@ -57,6 +57,11 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>${commons-beanutils.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
