fix: update SonarCloud build triggers for push and pull requests

--- a/.github/workflows/sonarcloud-build.yml
+++ b/.github/workflows/sonarcloud-build.yml
@@ -4,7 +4,18 @@
 
 name: SonarCloud Build
 
-on: push
+on:
+  push:
+    branches:
+      - "**"
+  pull_request:
+    branches:
+      - "main"
+      - "develop"
+  pull_request_target:
+    branches:
+      - "main"
+      - "develop"
 
 jobs:
   build:
